Cambios de rutas, carrito agregado

--- a/Cava Dorada/nosotros/index.html
+++ b/Cava Dorada/nosotros/index.html
@@ -49,6 +49,9 @@
           <form class="d-flex">
             <a href="#" class="user">
               <i class="fas fa-user px-3 "></i>
+              <a href="../carrito" class="cart">
+                <i class="fas fa-cart-shopping px-3"></i>
+              </a>
             </a>
           </form>
         </div>
