--- a/Cava Dorada/nuestrosVinos/blancos/index.html
+++ b/Cava Dorada/nuestrosVinos/blancos/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/assets/img/icons/wine-cup.png">
+    <link rel="icon" href="../assets/img/icons/wine-cup.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Blancos</title>
 </head>
 <body>
   <header>
     <div class="home-icon">
-      <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
+      <a href="../../"><img src="../../assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
     </div>
       <div class="cabecera-vinos">   
         <div class="encabezado">
-          <a href="/nuestrosVinos/tintos/"><p>TINTOS</p></a>
-          <a href="/nuestrosVinos/blancos/"><p>BLANCOS</p></a>
-          <a href="/nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
+          <a href="../../nuestrosVinos/tintos/"><p>TINTOS</p></a>
+          <a href="../../nuestrosVinos/blancos/"><p>BLANCOS</p></a>
+          <a href="../../nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
         </div>
       </div>
   </header>
@@ -31,7 +31,7 @@
           <div class="cards-container">
 
             <div class="product-card">
-              <img src="/assets/img/nuestros-vinos/charddonay.png">
+              <img src="../../assets/img/nuestros-vinos/charddonay.png">
               <div class="product-info">
                       <p>CHARDDONAY</p>
                       <div class="info-grid gap-2 d-md-block">
@@ -72,13 +72,13 @@
                             </div>
                           </div>
                         </div>
-                        <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                        <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                       </div>
               </div>
           </div> 
 
           <div class="product-card">
-            <img src="/assets/img/nuestros-vinos/s-blanc.png">
+            <img src="../../assets/img/nuestros-vinos/s-blanc.png">
             <div class="product-info">
                     <p>SAUVIGNON BLANC</p>
                     <div class="info-grid gap-2 d-md-block">
@@ -119,13 +119,13 @@
                           </div>
                         </div>
                       </div>
-                      <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                      <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                     </div>
             </div>
         </div> 
 
         <div class="product-card">
-          <img src="/assets/img/nuestros-vinos/torrontes.png">
+          <img src="../../assets/img/nuestros-vinos/torrontes.png">
           <div class="product-info">
                   <p>TORRONTÉS</p>
                   <div class="info-grid gap-2 d-md-block">
@@ -166,7 +166,7 @@
                         </div>
                       </div>
                     </div>
-                    <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                    <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                   </div>
           </div>
       </div> 
