--- a/Cava Dorada/nuestrosVinos/index.html
+++ b/Cava Dorada/nuestrosVinos/index.html
@@ -49,6 +49,9 @@
           <form class="d-flex">
             <a href="#" class="user">
               <i class="fas fa-user px-3 "></i>
+              <a href="../carrito" class="cart">
+                <i class="fas fa-cart-shopping px-3"></i>
+              </a>
             </a>
           </form>
         </div>
@@ -63,7 +66,7 @@
                 <div class="p-tintos">
                   <p>TINTOS</p> 
                 </div>
-                <img src="/assets/img/nuestros-vinos/tinto.jpg" alt="Seccion de vinos tintos">
+                <img src="../assets/img/nuestros-vinos/tinto.jpg" alt="Seccion de vinos tintos">
             </div>
         </a>
     </section>
@@ -73,7 +76,7 @@
                 <div class="p-blancos">
                   <p>BLANCOS</p> 
                 </div>
-                <img src="/assets/img/nuestros-vinos/blanco 3.jpg" alt="Seccion de vinos blancos">
+                <img src="../assets/img/nuestros-vinos/blanco 3.jpg" alt="Seccion de vinos blancos">
             </div>
         </a>
     </section>
@@ -83,7 +86,7 @@
                 <div class="p-rosados">
                   <p>ROSADOS</p> 
                 </div>
-                <img src="/assets/img/nuestros-vinos/rose.jpg" alt="Seccion de vinos rosados">
+                <img src="../assets/img/nuestros-vinos/rose.jpg" alt="Seccion de vinos rosados">
             </div>
         </a>
     </section>
