--- a/Cava Dorada/nuestrosVinos/rosados/index.html
+++ b/Cava Dorada/nuestrosVinos/rosados/index.html
@@ -9,19 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Rosados</title>
 </head>
 <body>
     <header>
       <div class="home-icon">
-        <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
+        <a href="../../"><img src="../../assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
       </div>
         <div class="cabecera-vinos">   
           <div class="encabezado">
-            <<a href="/nuestrosVinos/tintos/"><p>TINTOS</p></a>
-            <a href="/nuestrosVinos/blancos/"><p>BLANCOS</p></a>
-            <a href="/nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
+            <<a href="../../nuestrosVinos/tintos/"><p>TINTOS</p></a>
+            <a href="../../nuestrosVinos/blancos/"><p>BLANCOS</p></a>
+            <a href="../../nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
           </div>
         </div>
     </header>
@@ -30,7 +30,7 @@
           <div class="cards-container">
 
               <div class="product-card">
-                  <img src="/assets/img/nuestros-vinos/syrah.png">
+                  <img src="../../assets/img/nuestros-vinos/syrah.png">
                   <div class="product-info">
                           <p>SYRAH</p>
                           <div class="info-grid gap-2 d-md-block">
@@ -71,13 +71,13 @@
                                 </div>
                               </div>
                             </div>
-                            <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                            <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                           </div>
                   </div>
               </div> 
 
               <div class="product-card">
-                <img src="/assets/img/nuestros-vinos/rose-2.png">
+                <img src="../../assets/img/nuestros-vinos/rose-2.png">
                 <div class="product-info">
                         <p>CINSAULT</p>
                         <div class="info-grid gap-2 d-md-block">
@@ -118,13 +118,13 @@
                               </div>
                             </div>
                           </div>
-                          <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                          <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                         </div>
                 </div>
             </div> 
 
             <div class="product-card">
-              <img src="/assets/img/nuestros-vinos/rose-3.png">
+              <img src="../../assets/img/nuestros-vinos/rose-3.png">
               <div class="product-info">
                       <p>PINOT NOIR</p>
                       <div class="info-grid gap-2 d-md-block">
@@ -165,7 +165,7 @@
                             </div>
                           </div>
                         </div>
-                        <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                        <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                       </div>
               </div>
           </div>
