--- a/Cava Dorada/nuestrosVinos/tintos/index.html
+++ b/Cava Dorada/nuestrosVinos/tintos/index.html
@@ -9,19 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Tintos</title>
 </head>
 <body>
   <header>
     <div class="home-icon">
-      <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
+      <a href="../../"><img src="../../assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
     </div>
       <div class="cabecera-vinos">   
         <div class="encabezado">
-          <a href="/nuestrosVinos/tintos/"><p>TINTOS</p></a>
-          <a href="/nuestrosVinos/blancos/"><p>BLANCOS</p></a>
-          <a href="/nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
+          <a href="../../nuestrosVinos/tintos/"><p>TINTOS</p></a>
+          <a href="../../nuestrosVinos/blancos/"><p>BLANCOS</p></a>
+          <a href="../../nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
         </div>
       </div>
   </header>
@@ -31,7 +31,7 @@
         <div class="cards-container">
 
             <div class="product-card">
-                <img src="/assets/img/nuestros-vinos/malbec.jpg">
+                <img src="../../assets/img/nuestros-vinos/malbec.jpg">
                 <div class="product-info">
                         <p>MALBEC</p>
                         
@@ -75,13 +75,13 @@
                               </div>
                             </div>
                           </div>
-                          <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                          <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                         </div>
                 </div>
             </div>  
 
           <div class="product-card">
-            <img src="/assets/img/nuestros-vinos/tempranillo.jpg">
+            <img src="../../assets/img/nuestros-vinos/tempranillo.jpg">
             <div class="product-info">
 
                     <p>TEMPRANILLO</p>
@@ -122,14 +122,14 @@
                           </div>
                         </div>
                       </div>
-                      <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                      <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                     </div>
 
             </div>
         </div> 
 
         <div class="product-card">
-          <img src="/assets/img/nuestros-vinos/c-sauvignon.jpg">
+          <img src="../../assets/img/nuestros-vinos/c-sauvignon.jpg">
           <div class="product-info">
                   <p>CABERNET SAUVIGNON</p>
                   <div class="info-grid gap-2 d-md-block">
@@ -170,13 +170,13 @@
                         </div>
                       </div>
                     </div>
-                    <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                    <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                   </div>
           </div>
       </div> 
 
       <div class="product-card">
-        <img src="/assets/img/nuestros-vinos/c-franc.png">
+        <img src="../../assets/img/nuestros-vinos/c-franc.png">
         <div class="product-info">
                 <p>CABERNET FRANC</p>
                 <div class="info-grid gap-2 d-md-block">
@@ -215,13 +215,13 @@
                       </div>
                     </div>
                   </div>
-                  <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                  <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                 </div>
         </div>
     </div> 
 
     <div class="product-card">
-      <img src="/assets/img/nuestros-vinos/merlot.png">
+      <img src="../../assets/img/nuestros-vinos/merlot.png">
       <div class="product-info">
               <p>MERLOT</p>
               <div class="info-grid gap-2 d-md-block">
@@ -263,7 +263,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
               </div>
       </div>
   </div>
