--- a/Cava Dorada/tienda/index.html
+++ b/Cava Dorada/tienda/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/assets/img/icons/wine-cup.png">
+  <link rel="icon" href="../assets/img/icons/wine-cup.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Tienda</title>
 </head>
 
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="/index.html"> <span class="brand-cava">Cava</span><span
+        <a class="navbar-brand" href="../"> <span class="brand-cava">Cava</span><span
             class="brand-dorada">DORADA</span></a>
         <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -28,24 +28,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link px-3" href="/nosotros/index.html">Nosotros</a>
+              <a class="nav-link px-3" href="../nosotros">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="/nuestrosVinos/index.html">Nuestros vinos</a>
+              <a class="nav-link px-3" href="../nuestrosVinos">Nuestros vinos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="/enoturismo/index.html">Enoturismo</a>
+              <a class="nav-link px-3" href="../enoturismo">Enoturismo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="/tienda/index.html">Tienda</a>
+              <a class="nav-link px-3" href="../tienda">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="/contacto/index.html">Contacto</a>
+              <a class="nav-link px-3" href="../contacto">Contacto</a>
             </li>
           </ul>
           <form class="d-flex">
             <a href="#" class="user">
               <i class="fas fa-user px-3 "></i>
+              <a href="../carrito" class="cart">
+                <i class="fas fa-cart-shopping px-3"></i>
+              </a>
             </a>
           </form>
         </div>
