--- a/Cava Dorada/index.html
+++ b/Cava Dorada/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/img/icons/wine-cup.png" />
+    <link rel="icon" href="./assets/img/icons/wine-cup.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -44,32 +44,35 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link px-3" href="/nosotros/index.html"
+                <a class="nav-link px-3" href="./nosotros"
                   >Nosotros</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="/nuestrosVinos/index.html"
+                <a class="nav-link px-3" href="./nuestrosVinos"
                   >Nuestros vinos</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="/enoturismo/index.html"
+                <a class="nav-link px-3" href="./enoturismo"
                   >Enoturismo</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="/tienda/index.html">Tienda</a>
+                <a class="nav-link px-3" href="./tienda">Tienda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-3" href="/contacto/index.html"
+                <a class="nav-link px-3" href="./contacto"
                   >Contacto</a
                 >
               </li>
             </ul>
             <form class="d-flex">
-              <a href="/Cava Dorada/login/loginISPC/index.html" class="user">
-                <i class="fas fa-user px-3"></i>
+              <a href="#" class="user">
+                <i class="fas fa-user px-3 "></i>
+                <a href="./carrito/" class="cart">
+                  <i class="fas fa-cart-shopping px-3"></i>
+                </a>
               </a>
             </form>
           </div>
