Borre seccion tienda

--- a/Cava Dorada/carrito/index.html
+++ b/Cava Dorada/carrito/index.html
@@ -36,9 +36,6 @@
               <a class="nav-link px-3" href="../enoturismo">Enoturismo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="../tienda">Tienda</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link px-3" href="../contacto">Contacto</a>
             </li>
             <div>
@@ -49,7 +46,7 @@
             <a href="../login/loginISPC/" class="user">
               <i class="fas fa-user px-3 "></i>
             </a>
-            
+
             <a href="../carrito" class="cart">
               <i class="fas fa-cart-shopping px-3"></i>
             </a>
@@ -70,7 +67,7 @@
               <div class="col-lg-7">
                 <h5 class="mb-3"><a class href="../tienda/" class="text-body"><i
                       class="fas fa-long-arrow-alt-left me-2"></i>Continúa comprando</a></h5>
-                      
+
                 <hr>
 
                 <div class="d-flex justify-content-between align-items-center mb-4">
@@ -79,8 +76,8 @@
                     <p class="mb-0">Tu tienes 4 productos en tu carrito</p>
                   </div>
                   <div>
-                    <p class="mb-0"><span class="text-muted">Ordenar por:</span> <a href="#!"
-                        class="text-body">Precio <i class="fas fa-angle-down mt-1"></i></a></p>
+                    <p class="mb-0"><span class="text-muted">Ordenar por:</span> <a href="#!" class="text-body">Precio
+                        <i class="fas fa-angle-down mt-1"></i></a></p>
                   </div>
                 </div>
 
@@ -89,9 +86,8 @@
                     <div class="d-flex justify-content-between">
                       <div class="d-flex flex-row align-items-center">
                         <div>
-                          <img
-                            src="../assets/img/nuestros-vinos/c-franc.png"
-                            class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                          <img src="../assets/img/nuestros-vinos/c-franc.png" class="img-fluid rounded-3"
+                            alt="Shopping item" style="width: 65px;">
                         </div>
                         <div class="ms-3">
                           <h5>CABERNET FRANC</h5>
@@ -115,9 +111,8 @@
                     <div class="d-flex justify-content-between">
                       <div class="d-flex flex-row align-items-center">
                         <div>
-                          <img
-                            src="../assets/img/nuestros-vinos/blanco 3.jpg"
-                            class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                          <img src="../assets/img/nuestros-vinos/blanco 3.jpg" class="img-fluid rounded-3"
+                            alt="Shopping item" style="width: 65px;">
                         </div>
                         <div class="ms-3">
                           <h5>Charddonay</h5>
@@ -141,9 +136,8 @@
                     <div class="d-flex justify-content-between">
                       <div class="d-flex flex-row align-items-center">
                         <div>
-                          <img
-                            src="../assets/img/nuestros-vinos/rose.jpg"
-                            class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                          <img src="../assets/img/nuestros-vinos/rose.jpg" class="img-fluid rounded-3"
+                            alt="Shopping item" style="width: 65px;">
                         </div>
                         <div class="ms-3">
                           <h5>CINSAULT</h5>
@@ -167,9 +161,8 @@
                     <div class="d-flex justify-content-between">
                       <div class="d-flex flex-row align-items-center">
                         <div>
-                          <img
-                            src="../assets/img/nuestros-vinos/malbec.jpg"
-                            class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                          <img src="../assets/img/nuestros-vinos/malbec.jpg" class="img-fluid rounded-3"
+                            alt="Shopping item" style="width: 65px;">
                         </div>
                         <div class="ms-3">
                           <h5>PINOT NOIR</h5>
@@ -195,17 +188,14 @@
                   <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                       <h5 class="mb-0">¿Cómo querés pagar?</h5>
-                      <img src="../assets/img/icons/carrito1.png"
-                        class="img-fluid rounded-3" style="width: 45px;" alt="Avatar">
+                      <img src="../assets/img/icons/carrito1.png" class="img-fluid rounded-3" style="width: 45px;"
+                        alt="Avatar">
                     </div>
 
                     <p class="small mb-2">Tipo de Tarjeta</p>
-                    <a href="#!" type="submit" class="text-white"><i
-                        class="fab fa-cc-mastercard fa-2x me-2"></i></a>
-                    <a href="#!" type="submit" class="text-white"><i
-                        class="fab fa-cc-visa fa-2x me-2"></i></a>
-                    <a href="#!" type="submit" class="text-white"><i
-                        class="fab fa-cc-amex fa-2x me-2"></i></a>
+                    <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-mastercard fa-2x me-2"></i></a>
+                    <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-visa fa-2x me-2"></i></a>
+                    <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-amex fa-2x me-2"></i></a>
                     <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-paypal fa-2x"></i></a>
 
                     <form class="mt-4">
@@ -224,8 +214,8 @@
                       <div class="row mb-4">
                         <div class="col-md-6">
                           <div class="form-outline form-white">
-                            <input type="text" id="typeExp" class="form-control form-control-lg"
-                              placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7" />
+                            <input type="text" id="typeExp" class="form-control form-control-lg" placeholder="MM/YYYY"
+                              size="7" id="exp" minlength="7" maxlength="7" />
                             <label class="form-label" for="typeExp">Fecha de expiración</label>
                           </div>
                         </div>
