Arreglando el formulario que se habia roto

--- a/Cava Dorada/enoturismo/index.html
+++ b/Cava Dorada/enoturismo/index.html
@@ -270,9 +270,8 @@
   <div class="left-col"></div>
   <div class="right-col">
     <div class="titulo-reserva">
-
-h1>Realiza tu reserva</h1>
-
+    <h1>Realiza tu reserva</h1>
+</div>
 
 <form id="contact-form" method="post">
 
