--- a/Cava Dorada/nuestrosVinos/index.html
+++ b/Cava Dorada/nuestrosVinos/index.html
@@ -103,7 +103,7 @@
         <div class="modal-content">
           <form action="/examples/actions/confirmation.php" method="post">
             <div class="modal-header-news">
-              <h4>Suscribete a nuestro Newsletter</h4>	
+              <h4>Suscribite a nuestro Newsletter</h4>	
               
             </div>
             <div class="modal-body-news text-center">				
