enlazando charddonay con carrito, prueba

--- a/Cava Dorada/nuestrosVinos/blancos/index.html
+++ b/Cava Dorada/nuestrosVinos/blancos/index.html
@@ -72,7 +72,7 @@
                             </div>
                           </div>
                         </div>
-                        <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                        <a href="../../carrito/" class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                       </div>
               </div>
           </div> 
