--- a/Cava Dorada/index.html
+++ b/Cava Dorada/index.html
@@ -10,6 +10,9 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap" rel="stylesheet">
   <title>Cava Dorada</title>
 </head>
 
@@ -54,6 +57,128 @@
       </div>
     </nav>
   </header>
+
+  <!-- main -->
+  <main>
+    <!-- carrusel de Principal -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/nuestros-vinos/cava.png" class="d-block w-100" alt="Cava">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/nuestros-vinos/enoturismo.png" class="d-block w-100" alt="enoturismo">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/nuestros-vinos/cava 2.png" class="d-block w-100" alt="cava 2">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+
+
+
+    <section class="contenedor10 seccion">         
+        <h2 class="texto-1 centrar-texto">Ultimas Novedades</h2>
+        <div class="novedades">
+          <div class="novedades-nuevo">
+            <img src="/ProyectoIntegrador_FullStack/Cava Dorada/assets/img/novedades/4.jpg" alt="" class="img-novedades">
+            <div class="contenido-novedades">
+              <h3>Enoturismo</h3>
+                <p>Acércate a nuestros vinos a través de los sentidos, 
+                  viajando mediante degustaciones seleccionadas y hechas 
+                  a la medida de cada tipo de consumidor, en un viaje sensorial
+                   y enriquecedor para conocer de primera mano nuestros productos.</p>
+              <a href="/ProyectoIntegrador_FullStack/Cava Dorada/nosotros/" class="boton boton-final1 block">Mas Info</a>
+            </div>
+          </div>
+
+          <div class="novedades-nuevo">
+            <img src="/ProyectoIntegrador_FullStack/Cava Dorada/assets/img/novedades/5.jpg" alt="" class="img-novedades">
+            <div class="contenido-novedades">
+              <h3>Nuevos Sabores</h3>
+              <p>Realizados a partir de una enología de alta gama y dedicada a 
+                realzar el terroir maravilloso que es Agrelo. Se realizan trabajos 
+                conscientes desde la planta a la botella, armonía y simpleza en la
+                 elaboración y cuidado de los vinos.</p>
+              <a href="/ProyectoIntegrador_FullStack/Cava Dorada/nuestrosVinos/" class="boton boton-final1 block">Mas Info</a>
+            </div>
+          </div>
+
+          <div class="novedades-nuevo">
+            <img src="/ProyectoIntegrador_FullStack/Cava Dorada/assets/img/novedades/6.jpg" alt="" class="img-novedades">
+            <div class="contenido-novedades">
+              <h3>Bodega</h3>
+              <p>Equipada con tecnología de clase mundial y un método absolutamente 
+                innovador desarrollado por nosotros, elaboramos nuestros vinos sin estresarlos 
+                en ningún momento utilizando nuestros novedosos Mates de Concreto.</p>
+
+              <a href="/ProyectoIntegrador_FullStack/Cava Dorada/nosotros/" class="boton boton-final1 block">Mas Info</a>
+            </div>
+          </div>
+        </div>
+    </section>
+  </main>
+
+  <!-- contactanos -->
+
+    <section class="contacto-ppal">
+      <div class="contenedor10 contacto-contenidos">
+         <h2>Cumple tu Sueño</h2>
+          <p>La Sed de viajar es imprescindible, un síntoma pleno de inteligencia y una inversión a tu salud… </p>
+          <p>No esperes más!!!</p>
+          <a href="/ProyectoIntegrador_FullStack/Cava Dorada/contacto/index.html" class="boton boton-final1">CONTACTANOS</a>
+      </div>
+    </section>
+
+ <!-- testimoniales -->
+
+    <div class="contenedor10 capa-black capa">
+        <h2>Testimoniales</h2>
+        
+          <div class="contenedor-testimoniales">
+              <div class="testimonial">
+                <div class="uno foto-perfil"></div>
+                <h3>Lorenzo Funes</h3>
+                <h4>Compro los productos desde la web y los recomiendo, 
+                  los envíos siempre llegan en tiempo y forma. </h4>
+                <p>14 de Octubre 2022</p>
+
+              </div>
+
+              <div class="testimonial">
+                <div class="dos foto-perfil "></div>
+                <h3>Andrea Gonzalez</h3>
+                <h4>Recomiendo CavaDorada por su compromiso
+                   y la calidad de sus productos.</h4>
+                <p>05 de Octubre 2022</p>
+
+              </div>
+
+              <div class="testimonial">
+                <div class="tres foto-perfil "></div>
+                <h3>Sebastian Correa</h3>
+                <h4>La amplia variedad de productos me parecieron muy buenos 
+                  y el contacto con ustedes siempre fue práctico y muy seguro. </h4>
+                <p>20 de Septiembre 2022</p>
+
+              </div>
+          </div>
+        
+    </div>
 
   <!-- footer -->
   <footer class="footer py-4">
