--- a/Cava Dorada/carrito/index.html
+++ b/Cava Dorada/carrito/index.html
@@ -65,7 +65,7 @@
             <div class="row">
 
               <div class="col-lg-7">
-                <h5 class="mb-3"><a class href="../tienda/" class="text-body"><i
+                <h5 class="mb-3"><a class href="javascript: history.go(-1)" class="text-body"><i
                       class="fas fa-long-arrow-alt-left me-2"></i>Continúa comprando</a></h5>
 
                 <hr>
