--- a/Cava Dorada/nuestrosVinos/tintos/index.html
+++ b/Cava Dorada/nuestrosVinos/tintos/index.html
@@ -75,7 +75,7 @@
                               </div>
                             </div>
                           </div>
-                          <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                          <a href="../../carrito/" class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                         </div>
                 </div>
             </div>  
@@ -122,7 +122,7 @@
                           </div>
                         </div>
                       </div>
-                      <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                      <a href="../../carrito/" class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                     </div>
 
             </div>
@@ -170,7 +170,7 @@
                         </div>
                       </div>
                     </div>
-                    <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                    <a href="../../carrito/" class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                   </div>
           </div>
       </div> 
@@ -215,7 +215,7 @@
                       </div>
                     </div>
                   </div>
-                  <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                  <a href="../../carrito/" class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                 </div>
         </div>
     </div> 
@@ -263,7 +263,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+                <a href="../../carrito/" class="btn btn-cards" type="button"><img src="../../assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
               </div>
       </div>
   </div>
