Agregue carrito en seccion enoturismo

--- a/Cava Dorada/enoturismo/index.html
+++ b/Cava Dorada/enoturismo/index.html
@@ -48,6 +48,9 @@
             <a href="#" class="user">
               <i class="fas fa-user px-3 "></i>
             </a>
+            <a href="../carrito/" class="cart">
+              <i class="fas fa-cart-shopping px-3"></i>
+            </a>
           </form>
         </div>
       </div>
