cambiar link de las Fotos

--- a/Cava Dorada/index.html
+++ b/Cava Dorada/index.html
@@ -89,44 +89,44 @@
     </div>
 
 
-
+    <!-- Novedades -->
 
     <section class="contenedor10 seccion">         
         <h2 class="texto-1 centrar-texto">Ultimas Novedades</h2>
         <div class="novedades">
           <div class="novedades-nuevo">
-            <img src="/ProyectoIntegrador_FullStack/Cava Dorada/assets/img/novedades/4.jpg" alt="" class="img-novedades">
+            <img src="/Cava Dorada/assets/img/novedades/4.jpg" alt="Enoturismo" class="img-novedades">
             <div class="contenido-novedades">
               <h3>Enoturismo</h3>
                 <p>Acércate a nuestros vinos a través de los sentidos, 
                   viajando mediante degustaciones seleccionadas y hechas 
                   a la medida de cada tipo de consumidor, en un viaje sensorial
                    y enriquecedor para conocer de primera mano nuestros productos.</p>
-              <a href="/ProyectoIntegrador_FullStack/Cava Dorada/nosotros/" class="boton boton-final1 block">Mas Info</a>
+              <a href="/Cava Dorada/enoturismo" class="boton boton-final1 block">Mas Info</a>
             </div>
           </div>
 
           <div class="novedades-nuevo">
-            <img src="/ProyectoIntegrador_FullStack/Cava Dorada/assets/img/novedades/5.jpg" alt="" class="img-novedades">
+            <img src="/Cava Dorada/assets/img/novedades/5.jpg" alt="nuestrosVinos" class="img-novedades">
             <div class="contenido-novedades">
               <h3>Nuevos Sabores</h3>
               <p>Realizados a partir de una enología de alta gama y dedicada a 
                 realzar el terroir maravilloso que es Agrelo. Se realizan trabajos 
                 conscientes desde la planta a la botella, armonía y simpleza en la
                  elaboración y cuidado de los vinos.</p>
-              <a href="/ProyectoIntegrador_FullStack/Cava Dorada/nuestrosVinos/" class="boton boton-final1 block">Mas Info</a>
+              <a href="/Cava Dorada/nuestrosVinos/" class="boton boton-final1 block">Mas Info</a>
             </div>
           </div>
 
           <div class="novedades-nuevo">
-            <img src="/ProyectoIntegrador_FullStack/Cava Dorada/assets/img/novedades/6.jpg" alt="" class="img-novedades">
+            <img src="/Cava Dorada/assets/img/novedades/6.jpg" alt="bodega" class="img-novedades">
             <div class="contenido-novedades">
               <h3>Bodega</h3>
               <p>Equipada con tecnología de clase mundial y un método absolutamente 
                 innovador desarrollado por nosotros, elaboramos nuestros vinos sin estresarlos 
                 en ningún momento utilizando nuestros novedosos Mates de Concreto.</p>
 
-              <a href="/ProyectoIntegrador_FullStack/Cava Dorada/nosotros/" class="boton boton-final1 block">Mas Info</a>
+              <a href="/Cava Dorada/nuestrosVinos/" class="boton boton-final1 block">Mas Info</a>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
          <h2>Cumple tu Sueño</h2>
           <p>La Sed de viajar es imprescindible, un síntoma pleno de inteligencia y una inversión a tu salud… </p>
           <p>No esperes más!!!</p>
-          <a href="/ProyectoIntegrador_FullStack/Cava Dorada/contacto/index.html" class="boton boton-final1">CONTACTANOS</a>
+          <a href="/Cava Dorada/contacto/" class="boton boton-final1">CONTACTANOS</a>
       </div>
     </section>
 
