--- a/Cava Dorada/nuestrosVinos/tintos/index.html
+++ b/Cava Dorada/nuestrosVinos/tintos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/assets/img/icons/wine-cup.png">
+    <link rel="icon" href="/Cava Dorada/assets/img/icons/wine-cup.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
